--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
@@ -46,6 +45,7 @@
     "nodemailer": "^6.9.14",
     "npm": "^10.8.1",
     "socket.io": "^4.7.5",
+    "stripe": "^18.2.1",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.23.8"
