update env and add postman collection

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # Basic
 NODE_ENV=development
-DATABASE_URL=mongodb+srv://backend-temp:3CrxYIA7KkFgmLLI@cluster0.fudiykq.mongodb.net/bookrite?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL=mongodb://localhost:27017/bookrite-check
+# DATABASE_URL=mongodb+srv://backend-temp:3CrxYIA7KkFgmLLI@cluster0.fudiykq.mongodb.net/bookrite?retryWrites=true&w=majority&appName=Cluster0
 IP_ADDRESS=localhost
 PORT=5000
 
